# minimax_checkers

./: .gitignore  README.md  heroku.yml
crabsquared-checkers/: .dockerignore  Dockerfile  __init__.py  app.py  compile.sh  docker-compose.yml  package-lock.json  package.json  requirements.txt
crabsquared-checkers/api/: api.py
crabsquared-checkers/bot/: bot.py  bot_abstract.py  bot_first_possible.py  bot_manager.py  bot_minimax.py  bot_random.py
crabsquared-checkers/engine/: .gitignore  CMakeLists.txt  engine  engine.cpp  engine.h  run.sh
crabsquared-checkers/engine/python/: .gitignore  engine.cpp  engine.pxd  engine.pyx  setup.py  test.py
crabsquared-checkers/engine/tests/: CMakeLists.txt  test_8x8.cpp  test_8x8_clinch.cpp  test_8x8_forward_only.cpp  test_8x8_multi_capture.cpp  test_8x8_single_capture.cpp  test_driver.cpp  test_edgecase.cpp  test_not_rectangular.cpp  test_simple_movements.cpp  test_small.cpp  utils.h
crabsquared-checkers/engine/tests/make_move/: CMakeLists.txt  multiple_captures.cpp  non_capture.cpp  single_capture.cpp  test_driver.cpp  test_driver.h  utils.h
crabsquared-checkers/engine/tests/valid_moves/: CMakeLists.txt  test_8x8.cpp  test_8x8_clinch.cpp  test_8x8_forward_only.cpp  test_8x8_multi_capture.cpp  test_8x8_single_capture.cpp  test_driver.cpp  test_driver.h  test_edgecase.cpp  test_not_rectangular.cpp  test_small.cpp  utils.h
crabsquared-checkers/public/: index.html  manifest.json
crabsquared-checkers/src/: App.js  index.css
crabsquared-checkers/src/components/Board/: Board.js
crabsquared-checkers/src/components/Game/: Game.css  Game.js  Move.js  PathsLoader.js  Position.js
crabsquared-checkers/src/components/InfoPanel/: InfoPanel.js  InfoPanel.scss
crabsquared-checkers/src/components/InfoPanel/BotSelector/: BotSelector.js  BotSelector.scss
crabsquared-checkers/src/components/Square/: Square.js  Square.scss
crabsquared-checkers/src/components/Title/: Title.css  Title.js
react-flask-app/: package-lock.json  package.json
react-flask-app/api/: api.py
react-flask-app/src/: App.js
